{
  "address_placeholder": "Address",
  "amount": "amount",
  "app_name": "GeN",
  "available_not": "Not available in your country at the moment...",
  "CFBundleDisplayName": "GeN",
  "NSContactsUsageDescription": "Commercial management app",
  "barcode_placeholder": "Barcode",
  "cancel": "Cancel",
  "camera_permission": "We need your permission to show the camera",
  "cash_customer": "Cash customer",
  "city_placeholder": "City",
  "clear_all": "Clear all",
  "close": "Close",
  "confirm": "Confirm",
  "confirm_placeholder": "Retype your password",
  "contact_placeholder": "Contact name (owner)",
  "concept_placeholder": "Concept",
  "company": "Company",
  "company_name_placeholder": "Company name",
  "company_complete": "Please complete all company values",
  "country_placeholder": "Country",
  "create": "Create",
  "csr_please": "Please generate CSR first",
  "csr_generate": "Generate CSR",
  "crt_use": "use certificate",
  "customer_name_placeholder": "Customer name",
  "customers": "Customers",
  "date": "Date",
  "details": "Details",
  "description": "Description",
  "email": "Email",
  "email_placeholder": "bruce@wayne.com",
  "expo_system_ui_user_interface_style": "automatic",
  "expo_splash_screen_resize_mode": "contain",
  "expo_splash_screen_status_bar_translucent": "false",
  "export_": "Export",
  "forgot": "Forgot Password",
  "index": "Home",
  "invoice": "Invoice",
  "invoice_signature": "Invoice signature",
  "import_": "Import",
  "orders": "Orders",
  "password": "Password",
  "password_placeholder": "91939Dc#31",
  "password_forgot": "Forgot Password?",
  "password_reset": "Reset password",
  "password_reset_sent": "Password reset email sent. Please check your inbox",
  "password_new": "Enter your new password",
  "permission_grant": "grant permission",
  "phone_placeholder": "Phone",
  "price_placeholder": "Price",
  "process": "Process",
  "product_name_placeholder": "Product name",
  "products": "Products",
  "postal_code_placeholder": "Postal Code",
  "pto_vta_placeholder": "Point of sale",
  "qty": "Qty",
  "rate": "Rate",
  "region_code_placeholder": "Region code",
  "search_customers": "Search customers",
  "search_orders": "Search orders",
  "search_products": "Search products",
  "sign_in": "Sign In",
  "sign_in_please": "Please sign in",
  "sign_password_error": "Email or Password is incorrect. Try again, or use another method",
  "sign_up": "Sign Up",
  "sign_up_question": "Don't have an account?",
  "sign_out": "Sign Out",
  "state_placeholder": "State",
  "skip": "Skip",
  "taxes": "Taxes",
  "tin_placeholder": "TIN",
  "type_placeholder": "Type",
  "unit_placeholder": "Unit",
  "verify": "Verification",
  "verify_email": "Verify your email",
  "verify_email_error": "Please verify your email before signing in",
  "verify_email_sent": "Verification email sent",
  "verify_placeholder": "Enter your verify code",
  "welcome": "Welcome",
  "what_do_you_want_to_do_today": "What do you want to do today?",
  "quantity_placeholder": "Quantity",
  "add": "Add",
  "ok": "Ok"
}