...
                <TextInput
                    style={styles.input}
                    placeholder={placeholder}
                    value={searchQuery}
                    onChangeText={setSearchQuery}
                />
                {onRefresh && <Button title="⚡" testID='refresh' onPress={handleRefresh}/>}
            </View>
            <FlatList
                data={filtered}
                renderItem={renderItem}
                keyExtractor={(item) => item[id]}
                scrollEnabled={false}
...
